--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ image:
         }
       }
       EOF
+    - echo "DESTINATION=$DESTINATION"
     - >
       /kaniko/executor
       --dockerfile "Dockerfile"
@@ -37,7 +38,7 @@ build_tag:
   extends: .build_image
   variables:
     IMAGE_TAGE: $CI_COMMIT_TAG
-    DESTINATION: "--destination $IMAGE_NAME:$IMAGE_TAG"
+    DESTINATION: "--destination $IMAGE_NAME:$CI_COMMIT_TAG"
   only:
     - tags
 
