--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ image:
         }
       }
       EOF
+    - echo "DESTINATION=$DESTINATION"
     - >
       /kaniko/executor
       --dockerfile "Dockerfile"
