--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build_master:
   extends: .build_image
   variables:
     IMAGE_TAG: latest
-    DESTINATION: "--destination $IMAGE_NAME:$IMAGE_TAG"
+    DESTINATION: "--destination $IMAGE_NAME:latest"
   only:
     - master
 
@@ -38,7 +38,7 @@ build_tag:
   extends: .build_image
   variables:
     IMAGE_TAGE: $CI_COMMIT_TAG
-    DESTINATION: "--destination $IMAGE_NAME:$IMAGE_TAG"
+    DESTINATION: "--destination $IMAGE_NAME:$CI_COMMIT_TAG"
   only:
     - tags
 
