--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ variables:
   IMAGE_TAG: dev
 
 image:
-  name: gcr.io/kaniko-project/executor:v1.3.0-debug
+  name: gcr.io/kaniko-project/executor:debug
   entrypoint: [""]
 
 .build_image:
@@ -14,6 +14,9 @@ image:
       {
         "auths": {
           "https://index.docker.io/v1/": {
+            "auth": "$(echo -n "$DOCKER_HUB_USER:$DOCKER_HUB_PASSWORD" | base64)"
+          },
+          "https://registry.hub.docker.com/v1/": {
             "auth": "$(echo -n "$DOCKER_HUB_USER:$DOCKER_HUB_PASSWORD" | base64)"
           }
         }
